--- a/pet_blog/src/index.css
+++ b/pet_blog/src/index.css
@@ -230,7 +230,7 @@ Landing Page
 .landing-page-contents {
   display: grid;
   align-items: start;
-  gap: 5rem 
+  gap: 4rem 
 }
 
 .mobile-landing-page-hero-wrapper {
@@ -308,7 +308,7 @@ Landing Page
 .landing-page-featured-posts {
   display: grid;
   align-items: start;
-  row-gap: 4rem;
+  row-gap: 3rem;
   column-gap: 2.5rem;
 }
 
@@ -469,7 +469,7 @@ Landing Page
   display: grid;
   align-items: start;
   column-gap: 2rem;
-  row-gap: 4rem;
+  row-gap: 3rem;
 }
 
 .landing-page-post {
@@ -1115,7 +1115,7 @@ NAVIGATION BAR
 .mobile-navlinks-container {
   flex: 0 0 100%;
   background: white;
-  box-shadow: 4.0px 8.0px 8.0px rgba(0,0,0,0.38);
+  box-shadow: 3px 3px 22px -3px var(--black-50);
 }
 
 .mobile-navlinks {
@@ -1141,10 +1141,10 @@ NAVIGATION BAR
 
 .mobile-navlink{
   width: 100%;
-  padding: 1rem 0;
   color: var(--black-20);
   font-size: 1rem;
   text-wrap: nowrap !important;
+  padding: 0.7rem 0;
 }
 
 .mobile-active-navlink {
@@ -1154,7 +1154,7 @@ NAVIGATION BAR
 
 .mobile-logout-btn-container {
   width: 100%;
-  padding: 1rem 0;
+  padding: 0.7rem 0;
 }
 
 .mobile-logout-btn {
@@ -1215,7 +1215,7 @@ NAVIGATION BAR
 .mobile-authenticated-user-links {
   display: grid;
   align-content: start;
-  gap: 1.3rem;
+  gap: 0.8rem;
   max-height: 0;
   overflow-y: hidden;
   border-radius: 8px;
@@ -1226,7 +1226,7 @@ NAVIGATION BAR
 .show-mobile-authenticated-user-links {
   max-height: 500px;
   opacity: 1;
-  padding-top: 1.5rem;
+  padding-top: 1rem;
 }
 
 .mobile-authenticated-user-links > a {
@@ -1539,7 +1539,7 @@ Posts
   display: grid;
   align-content: start;
   column-gap: 2rem;
-  row-gap: 4rem;
+  row-gap: 3rem;
 }
 
 .post-search-no-result {
@@ -1791,6 +1791,7 @@ Post Detail
   text-wrap: pretty;
   color: var(--black-20);
   margin-top: 1rem;
+  font-size: 1.06rem;
 }
 
 .post-detail-container__like-and-reply {
@@ -2630,7 +2631,7 @@ My Posts
   display: grid;
   align-items: start;
   column-gap: 2rem;
-  row-gap: 4rem;
+  row-gap: 3rem;
 }
 
 .my-posts-container > 
@@ -2888,7 +2889,7 @@ Create & Update Post
   gap: 3rem;
   align-content: start;
   width: 90%;
-  max-width: 500px;
+  max-width: 600px;
   margin: 3rem auto;
 }
 
@@ -2933,10 +2934,14 @@ Create & Update Post
   font-weight: 500;
 }
 
-.current-image > input[type='text'] {
-  width: 100%;
-  box-sizing: border-box;
+.current-image > input {
   color: var(--black-30);
+}
+
+.create-post__form-container {
+  display: grid;
+  gap: 1rem;
+  align-content: start;
 }
 
 .create-post__form {
@@ -2950,33 +2955,80 @@ Create & Update Post
   gap: 0.5rem
 }
 
-input[type='text'], 
-input[type='file'] {
-  box-sizing: border-box;
-  width: 100%;
-}
-
-input[type='file'] {
-  max-width: 200px;
-}
-
-input[type="file"]::file-selector-button {
-  padding:0.4rem 0.5rem;
-  border-radius: 5px;
-  background: var(--cta);
-  color: white;
-  border: none;
-}
-
 .create-post__img-input-label,
 .create-post__label {
   font-size: 1rem;
   color: var(--black-20);
   font-weight: 500;
+  letter-spacing: 0.03rem;
+}
+
+.create-post-image-input-container {
+  border: 1px solid var(--black-80);
+  border-radius: 8px;
+  padding: 0.8rem;
+  background: white;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  overflow: hidden;
+}
+
+.create-post-image-input-container:focus {
+  outline: 3px solid var(--focus)
+}
+
+.create-post-hidden-input-label {
+  padding: 0.5rem 0.8rem;
+  border-radius: 7px;
+  background: var(--black-30);
+  color: white;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background 100ms linear;
+}
+
+@media (hover) {
+  .create-post-hidden-input-label:hover {
+    background: var(--black-15);
+  }
+}
+
+.create-post-upload-btn {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem
+}
+
+.create-post-upload-btn > i {
+  font-size: 1rem;
+}
+
+.create-post-selected-image {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  overflow: hidden;
+}
+
+.create-post-remove-btn {
+  border: none;
+  line-height: 1;
+  color: var(--black-30);
+  font-size: 1rem;
+  background: none;
+  margin-top: 0.3rem;
+}
+
+.create-post-selected-image > span {
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .create-post__select {
-  padding: 0.8rem 1rem;
+  padding: 1rem;
   border-radius:8px;
   letter-spacing: 0.05rem;
   background: white;
@@ -2988,12 +3040,14 @@ input[type="file"]::file-selector-button {
 .create-post__input,
 .create-post__textarea {
   font-size: 1rem;
-  padding: 0.8rem 1rem;
-  letter-spacing: 0.05rem;
+  padding: 1rem;
+  letter-spacing: 0.03rem;
   border-radius: 8px;
-  letter-spacing: 0.05rem;
-  resize: vertical;
   border: 1px solid var(--black-80)
+}
+
+.create-post__textarea {
+  resize: vertical;
 }
 
 .create-post__error {
@@ -3055,6 +3109,7 @@ input[type="file"]::file-selector-button {
 .create-post__input:focus,
 .create-post__textarea:focus {
   outline: 3px solid var(--focus);
+  border: none;
 }
 
 @media (min-width: 450px) {
@@ -3092,7 +3147,7 @@ TOPIC POSTS
   width: 90%;
   max-width: 1400px;
   margin: 2rem auto;
-  gap: 6rem;
+  column-gap: 6rem;
   min-height: 50dvh;
 }
 
@@ -3105,7 +3160,8 @@ TOPIC POSTS
 .topic-posts-container__posts {
   display: grid;
   align-content: start;
-  gap: 2rem;
+  row-gap: 3rem;
+  column-gap: 2rem;
 }
 
 /* 
@@ -3223,7 +3279,7 @@ USER REGISTER
   min-height: 100svh;
   gap: 3rem;
   width: 90%;
-  max-width: 500px;
+  max-width: 600px;
   margin: 3rem auto;
 }
 
@@ -3250,7 +3306,6 @@ USER REGISTER
 }
 
 .user-register__header {
-  letter-spacing: 0.05rem;
   color: var(--black-20);
   font-weight: 600;
   font-size: 1.5rem;
@@ -3260,7 +3315,7 @@ USER REGISTER
 .user-register__form {
   display: grid;
   align-content: start;
-  gap: 1rem
+  gap: 1.2rem
 }
 
 .user-register-input-container {
@@ -3271,16 +3326,15 @@ USER REGISTER
 .user-register-input-container > label {
   font-weight: 500;
   font-size: 1rem;
-  color: var(--black-20)
+  color: var(--black-20);
+  letter-spacing: 0.03rem;
 }
 
 .user-register__input {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0.7rem 1rem;
+  padding: 1rem;
   border: 1px solid var(--black-80);
   font-size: 1rem;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.03rem;
   border-radius: 8px;
   background: white;
 }
@@ -3291,17 +3345,16 @@ USER REGISTER
 }
 
 .user-register__btn {
-  padding: 0.8rem 1rem;
+  padding: 1rem;
   background: var(--cta);
   color: var(--black-95);
-  font-size: 1rem;
-  border-radius: 25px;
+  font-size: 1.1rem;
+  border-radius: 30px;
   border: none;
   letter-spacing: 0.05rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-transform: uppercase;
   font-weight: 500;
 }
 
@@ -3330,6 +3383,7 @@ USER REGISTER
 .user-register__already-registered {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   row-gap: 0.5rem;
@@ -3337,22 +3391,27 @@ USER REGISTER
 }
 
 .user-register__already-registered > p {
-  letter-spacing: 0.07rem;
-  color: var(--black-30);
+  letter-spacing: 0.03rem;
+  color: var(--black-20);
 }
 
 .user-register__already-registered > a {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  color: var(--black-20);
-  letter-spacing: 0.05rem;
+  color: var(--cta);
+  letter-spacing: 0.03rem;
   font-weight: 500;
+}
+
+.user-register__already-registered > a > i {
+  font-size: 0.95rem;
+  line-height: 1;
+  margin-top: 0.2rem;
 }
 
 @media (hover) {
   .user-register__already-registered > a:hover {
-    font-weight: bold;
     color: var(--hover)
   }
 }
@@ -3421,7 +3480,6 @@ USER LOGIN
 }
 
 .user-login__header {
-  letter-spacing: 0.05rem;
   color: var(--black-20);
   font-weight: 600;
   font-size: 1.5rem;
@@ -3430,7 +3488,7 @@ USER LOGIN
 
 .user-login__form {
   display: grid;
-  gap: 1rem;
+  gap: 1.2rem;
 }
 
 .login-input-container {
@@ -3443,12 +3501,13 @@ USER LOGIN
   color: var(--black-20);
   font-size: 1rem;
   font-weight: 500;
+  letter-spacing: 0.03rem;
 }
 
 .user-login__input {
   width: 100%;
   box-sizing: border-box;
-  padding: 0.8rem 1rem;
+  padding: 1rem;
   border: 1px solid var(--black-80);
   font-size: 1rem;
   letter-spacing: 0.05rem;
@@ -3465,7 +3524,7 @@ USER LOGIN
   padding: 0.8rem 1rem;
   background: var(--cta);
   color: var(--black-95);
-  font-size: 1rem;
+  font-size: 1.1rem;
   border-radius: 25px;
   border: none;
   letter-spacing: 0.05rem;
@@ -3473,12 +3532,12 @@ USER LOGIN
   align-items: center;
   justify-content: center;
   font-weight: 500;
-  text-transform: uppercase;
 }
 
 .user-login__not-yet-registered {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1rem;
   row-gap: 0.5rem;
@@ -3486,22 +3545,27 @@ USER LOGIN
 }
 
 .user-login__not-yet-registered > p {
-  letter-spacing: 0.07rem;
-  color: var(--black-30);
+  letter-spacing: 0.03rem;
+  color: var(--black-20);
 }
 
 .user-login__not-yet-registered > a {
   display: flex;
   align-items: center;
   gap: 0.5rem;
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.03rem;
   font-weight: 500;
-  color: var(--black-20);
+  color: var(--cta);
+}
+
+.user-login__not-yet-registered > a > i {
+  line-height: 1;
+  margin-top: 0.2rem;
+  font-size: 0.95rem;
 }
 
 .user-login__not-yet-registered > a:hover {
   color: var(--hover);
-  font-weight: bold !important;
 }
 
 @media (min-width:700px) {
@@ -3838,7 +3902,7 @@ DASHBOARD
 }
 
 .dashboard-user-img {
-  width: 150px;
+  width: 100px;
   aspect-ratio: 1/1;
   border-radius: 50%;
   display: block;
